# ai-project-naman

./: AGENTS.md  README.md  chatbot-manual-tests.md  client-server.md  docker-compose.yml  pure-adk-migration-plan.md  spec-agent-1.md  spec-agent-2.md  spec-agent-3.md  spec-agent-4.md  spec-agent-5.md  spec-agent-6.md  spec-agent-7.md
client/: vite.config.ts
client/src/hooks/: useAuth.tsx  useChatState.ts
client/src/lib/: api.ts
client/src/pages/: ChatPage.tsx
client/src/types/: auth.ts  chat.ts
download/: local-document-spec.md
ops-agent/: .env.example  AGENTS.md  README.md  pyproject.toml  run_agent.py
ops-agent/adk_app/: __init__.py
ops-agent/adk_app/opscopilot/: __init__.py  agent.py
ops-agent/app/: adk_agent.py  investigation_entry.py  investigation_flow.py  main.py  schemas.py  service.py
ops-agent/app/agents/: __init__.py  context_builder_agent.py  incident_analysis_agent.py  opscopilot_agent.py  orchestrator_agent.py  response_composer_agent.py  runtime.py
ops-agent/app/contracts/: __init__.py
ops-agent/app/core/: config.py
ops-agent/app/orchestration/: __init__.py  errors.py  logging.py  persistence.py  pipeline.py  retrieval.py  runtime_policy.py
ops-agent/app/services/: output_normalizer.py
ops-agent/app/tools/: __init__.py  agent_tools.py  contracts.py  database_contracts.py  database_tools.py  docs_search.py  web_search.py
server/: AGENTS.md  pyproject.toml  seed_loader.py
server/alembic/versions/: 0001_opscopilot_mvp_schema.py  0002_drop_services_repo_url.py
server/seed_data/: users.json
server/tests/: conftest.py
(+16 files in other folders)
