[project]
name = "ops-agent"
version = "0.1.0"
description = "Standalone OpsCopilot agent service powered by Google ADK"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "google-adk>=1.0",
]

[tool.uv]
managed = true
